--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
                 <div class="wish-text">
-                    <h3 id="demo" >Happy Diwali </h3>
+                    <h3 id="demo" >Wishing you a very Happy Diwali </h3>
                 </div>
                 <br><br>
                 <button class="btn btn-lg btn-yellow" id="btn">Another Wish</button>
